[package]
name = "carstein_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.timeloop]
default-features = false
features = ["enable"]
git = "https://github.com/ctfhacker/timeloop"
version = "0.1.0"
